--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CreditJet</title>
-  </head>
-  <body>
-    <p>Future CreditJet Landing Page</p>
-  </body>
+    <head>
+        <title>JetCredit</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    </head>
+    <body class="bg-secondary">
+        <nav class="bg-dark navbar navbar-dark navbar-expand">
+            <a class="navbar-brand" href="index.html">Frank Giddens</a>
+            <ul class="ml-auto navbar-nav">
+                <li class="navbar-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                <li class="navbar-item"><a class="nav-link" href="reserve.html">Reserve</a></li>
+            </ul>
+        </nav>
+        <br>
+        <div class="container container-expand">
+            <div class="bg-dark card text-light">
+                <h1 class="card-title ml-3">Main Title</h1>
+                <h2 class="card-subtitle ml-4"><em>Main Subtitle</em></h2>
+                <div class="card-body">
+                    <p>Main Body</p>
+                </div>
+            </div>
+            <br>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    </body>
 </html>
