--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>JetCredit</title>
+        <title>CreditJet</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
     <body class="bg-secondary">
         <nav class="bg-dark navbar navbar-dark navbar-expand">
-            <a class="navbar-brand" href="index.html">Frank Giddens</a>
+            <a class="navbar-brand" href="index.html">CreditJet</a>
             <ul class="ml-auto navbar-nav">
                 <li class="navbar-item"><a class="nav-link" href="blog.html">Blog</a></li>
                 <li class="navbar-item"><a class="nav-link" href="reserve.html">Reserve</a></li>
@@ -16,7 +16,7 @@
         <div class="container container-expand">
             <div class="bg-dark card text-light">
                 <h1 class="card-title ml-3">Main Title</h1>
-                <h2 class="card-subtitle ml-4"><em>Main Subtitle</em></h2>
+                <h2 class="card-subtitle ml-3">Main Subtitle</h2>
                 <div class="card-body">
                     <p>Main Body</p>
                 </div>
